Fix safari x page overflow

--- a/src/components/ProjectDetail/ProjectDetail.module.scss
+++ b/src/components/ProjectDetail/ProjectDetail.module.scss
@@ -4,6 +4,7 @@
   line-height: 1.3;
   background: #d7d7d4;
   padding: 80px 0;
+  overflow-x: hidden;
 }
 
 .item {
