--- a/src/components/ProjectDetail/RelatedProjectSlider/RelatedProjectSlider.module.scss
+++ b/src/components/ProjectDetail/RelatedProjectSlider/RelatedProjectSlider.module.scss
@@ -17,7 +17,6 @@
     --spacing-left: 0;
     max-width: 640px;
     margin: 72px auto 0;
-    overflow-x: visible;
 
     h4 {
       font-size: var(--font-med);
